resolving animations bug

--- a/index.html
+++ b/index.html
@@ -88,20 +88,20 @@
 
         
             <div class="flex togeather gap-10 mb-20">
-            <div class="tags flex gap-10"><div class="overhide "><img class="icon-w" src="./icons/js.svg"></div> <div class="emphsx">Javascript</div></div>
-            <div class="tags flex gap-10"><div class="overhide "><img class="icon-w" src="./icons/python.svg"></div> <div class="emphsx">Python</div></div>
-            <div class="tags flex gap-10"><div class="overhide "><img class="icon-w" src="./icons/file-type-cpp3.svg"></div> <div class="emphsx">C++</div></div>
-            <div class="tags flex gap-10"><div class="overhide "><img class="icon-w" src="./icons/react-javascript-js-framework-facebook.svg"></div> <div class="emphsx">React</div></div>
-            <div class="tags flex gap-10"><div class="overhide "><img class="icon-w" src="./icons/react-javascript-js-framework-facebook.svg"></div> <div class="emphsx">React Native</div></div>
-            <div class="tags flex gap-10"><div class="overhide "><img class="icon-w" src="./icons/flutter.svg"></div> <div class="emphsx">Flutter</div></div>
-            <div class="tags flex gap-10"><div class="overhide "><img class="icon-w" src="./icons/file-type-angular.svg"></div> <div class="emphsx">Angular</div></div>
-            <div class="tags flex gap-10"><div class="overhide "><img class="icon-w" src="./icons/next-dot-js.svg"></div> <div class="emphsx">NextJs</div></div>
-            <div class="tags flex gap-10"><div class="overhide "><img class="icon-w" src="./icons/express-original.svg"></div> <div class="emphsx">Express</div></div>
-            <div class="tags flex gap-10"><div class="overhide "><img class="icon-w" src="./icons/djangoproject.svg"></div> <div class="emphsx">Django</div></div>
-            <div class="tags flex gap-10"><div class="overhide "><img class="icon-w" src="./icons/database.svg"></div> <div class="emphsx">Databases</div></div>
-            <div class="tags flex gap-10"><div class="overhide "><img class="icon-w" src="./icons/ui8.svg"></div> <div class="emphsx">UI/UX</div></div>
-            <div class="tags flex gap-10"><div class="overhide "><img class="icon-w" src="./icons/seo.svg"></div> <div class="emphsx">SEO</div></div>
-            <div class="tags flex gap-10"><div class="overhide "><img class="icon-w" src="./icons/wordpress.svg"></div> <div class="emphsx">WordPress</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/js.svg"></div> <div class="emphsx">Javascript</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/python.svg"></div> <div class="emphsx">Python</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/file-type-cpp3.svg"></div> <div class="emphsx">C++</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/react-javascript-js-framework-facebook.svg"></div> <div class="emphsx">React</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/react-javascript-js-framework-facebook.svg"></div> <div class="emphsx">React Native</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/flutter.svg"></div> <div class="emphsx">Flutter</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/file-type-angular.svg"></div> <div class="emphsx">Angular</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/next-dot-js.svg"></div> <div class="emphsx">NextJs</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/express-original.svg"></div> <div class="emphsx">Express</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/djangoproject.svg"></div> <div class="emphsx">Django</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/database.svg"></div> <div class="emphsx">Databases</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/ui8.svg"></div> <div class="emphsx">UI/UX</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/seo.svg"></div> <div class="emphsx">SEO</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/wordpress.svg"></div> <div class="emphsx">WordPress</div></div>
 
             </div>
             
