solving responsiveness issues

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 
     
       <nav class="phn-menu flex-col">
+        <div class="nav-mob-btn absolute">
+          <div class=" flex default icon"><svg  xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#008cff"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></div> </button>
+        </div>
         <a target="_blank" href="/"  class="menu-item">Blog</a>
         <a target="_blank" href="https://www.linkedin.com/in/nishant-singh-jaryal/" class="menu-item">Linkedin</a>
         <a target="_blank" href="/" class="menu-item">Resume</a>
