resolving responsiveness issues

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                <div class="star-eight"></div>
              </div>
            <div></div></div>
-           <h1>Skills</h1>
+           <h1 class="h1lnhgt">Skills</h1>
            </div>
 
         
