--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <div class="flex default">
         <div class="right flex-col">
-          <div class="wrapper">
+          <div class="wrapper mob-top-">
             <h1 class="bighead">Hi <div class="inline"><div class="bigEmo relative">🖐🏻</div></div></h1>
             <h3>from <span class="emphsx">Nishant Singh</span></h3>
             <h1 class="h1lnhgt">web developer</h1>
@@ -73,7 +73,7 @@
           </nav>
           <button class="nav-pc-btn absolute"> <div class=" flex default icon"><svg  xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></div> </button>
 
-          <div class="wrapper head-tag mt-50-left flex-col gap-15 togeather">
+          <div class="wrapper head-tag mt-50-left flex-col gap-15 togeather mob-top-20">
 
            <div class="flex spc ">
             <div class="container-str mr-20 block ">
