--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <div class="flex default">
         <div class="right flex-col">
-          <div class="wrapper mob-top-">
+          <div class="wrapper mob-top">
             <h1 class="bighead">Hi <div class="inline"><div class="bigEmo relative">🖐🏻</div></div></h1>
             <h3>from <span class="emphsx">Nishant Singh</span></h3>
             <h1 class="h1lnhgt">web developer</h1>
