--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 
         
             <div class="flex togeather gap-10 mb-20">
-            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/js.svg"></div> <div class="emphsx">Javascript</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/js.png"></div> <div class="emphsx">Javascript</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/ts.png"></div> <div class="emphsx">Typescript</div></div>
             <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/python.svg"></div> <div class="emphsx">Python</div></div>
             <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/file-type-cpp3.svg"></div> <div class="emphsx">C++</div></div>
             <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/react-javascript-js-framework-facebook.svg"></div> <div class="emphsx">React</div></div>
@@ -103,8 +104,8 @@
             <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/djangoproject.svg"></div> <div class="emphsx">Django</div></div>
             <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/database.svg"></div> <div class="emphsx">Databases</div></div>
             <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/ui8.svg"></div> <div class="emphsx">UI/UX</div></div>
-            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/seo.svg"></div> <div class="emphsx">SEO</div></div>
-            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/wordpress.svg"></div> <div class="emphsx">WordPress</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/graphql.svg"></div> <div class="emphsx">GraphQL</div></div>
+            <div class="tags flex gap-10 pop"><div class="overhide "><img class="icon-w" src="./icons/file-type-docker.256x146.png"></div> <div class="emphsx">Docker</div></div>
 
             </div>
             
